		Added a new trait Demolishable for buildings to handle the C4 demolition.
		Mods that use custom TileSize must specify both width and height.
		If you spot black tiles in your Dune 2000 ARRAKIS maps, replace them with the remaining sand and rock tiles. Go to Map → Fix Open Areas to randomize them.

20131223:
	All mods:
		Fixed dead units sometimes exploding or leaving husks when they weren't in the world.
		Added hover and disabled button states [RA / D2K / TS]
		Added double click start support to the replay browser.
		Fixed low projectiles not colliding with walls.
		Fixed double-click selection priority glitches.
		Improved UI decorations (selection boxes, target lines, etc) in pixel double mode.
		Added additional stand animations to infantry [RA / TD]
		Added the ability to double click select maps and music.
		Fixed base attack notification playing when allied engineers repaired your buildings.
		Improved the ingame chat interface and input, with it defaulting to Team Chat.
		Redesigned the settings panel.
		Re-added move flashes.
		Added a setting to always display unit status bars (can also be toggled by hotkey).
		Added a setting for team health bar colors.
		Added a new hotkey to select all units on screen (default: CTRL + A).
		Added a new hotkey to jump to production buildings (default: TAB).
		Changed default hotkey (PageUp/Down) for build palette cycling and made reverse user configurable.
		Improved shroud/fog rendering.
	Asset Browser:
		Fixed crashes when trying to load invalid filenames or sprites with just 1 frame.
		Added support for all sprite types.
		Added palette chooser and colorpicker dropdown boxes.
		Overhauled layout.
	Red Alert:
		Added MAD Tank.
		Fixed a crash in Monster Tank Madness.
		Fixed medics sometimes healing enemies.
		Reduced Giant Ant selection box size.
		Fixed paradrop description.
		Various balance adjustments:
			Uparmored Mobile Radar Jammer to heavy.