@@ -8,8 +8,10 @@
  */
 #endregion
 
+using System;
 using System.Collections.Generic;
 using System.Drawing;
+using System.Linq;
 using OpenRA.FileFormats;
 using OpenRA.Graphics;
 using OpenRA.Support;
@@ -126,7 +128,7 @@ namespace OpenRA.Mods.Cnc
 		void TestAndContinue()
 		{
 			Ui.ResetAll();
-			if (!FileSystem.Exists(loadInfo["TestFile"]))
+			if (!loadInfo["TestFiles"].Split(',').All(f => FileSystem.Exists(f.Trim())))
 			{
 				var args = new WidgetArgs()
 				{
