@@ -109,7 +109,8 @@ Translations:
 LoadScreen: DefaultLoadScreen
 	Image: mods/d2k/uibits/loadscreen.png
 	InstallerMenuWidget: INSTALL_PANEL
-	TestFile: DATA.R8
+# TODO: check if DATA.R8 is at 1.03 patch level with 4840 frames
+	TestFiles: BLOXBASE.R8, BLOXBAT.R8, BLOXBGBS.R8, BLOXICE.R8, BLOXTREE.R8, BLOXWAST.R8, DATA.R8, SOUND.RS
 	PackageURL: http://open-ra.org/download/content/d2k-103-packages
 	Text: Filling Crates..., Breeding Sandworms...
 
