@@ -148,7 +148,7 @@ Translations:
 LoadScreen: DefaultLoadScreen
 	Image: mods/ts/uibits/loadscreen.png
 	InstallerMenuWidget: INSTALL_PANEL
-	TestFile: isotemp.mix
+	TestFiles: cache.mix, conquer.mix, isosnow.mix, isotemp.mix, local.mix, sidec01.mix, sidec02.mix, sno.mix, snow.mix, sounds.mix, speech01.mix, tem.mix, temperat.mix
 	PackageURL: http://open-ra.org/download/content/ts-packages
 	Text: Updating EVA installation..., Changing perspective...
 
