@@ -44,6 +44,7 @@ NEW:
 		Added a new trait Demolishable for buildings to handle the C4 demolition.
 		Mods that use custom TileSize must specify both width and height.
 		If you spot black tiles in your Dune 2000 ARRAKIS maps, replace them with the remaining sand and rock tiles. Go to Map → Fix Open Areas to randomize them.
+		The TestFile check in mod.yaml has been renamed to TestFiles (plural!) and now supports a comma-separated list of assets that are required to load the game.
 
 20131223:
 	All mods:
